--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -1271,6 +1271,19 @@ nav .submenu .current_page_item {
   content: url('https://api.iconify.design/ph/map-pin.svg?width=22&height=22');
 }
 
+.woocommerce .icon-phone .woocommerce-input-wrapper::before {
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 36 36'%3E%3Cpath fill='%2331373d' d='m34.06 26.407l-3.496-3.496a4.942 4.942 0 0 0-8.34 2.528c-5.765-1.078-11.372-6.662-11.721-11.653a4.908 4.908 0 0 0 2.586-1.36a4.943 4.943 0 0 0 0-6.99L9.594 1.94a4.943 4.943 0 0 0-6.99 0C-7.882 12.426 23.574 43.882 34.06 33.396a4.944 4.944 0 0 0 0-6.989'/%3E%3C/svg%3E");
+}
+
+.woocommerce .validate-phone .woocommerce-input-wrapper::before {
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 36 36'%3E%3Cpath fill='%2331373d' d='m34.06 26.407l-3.496-3.496a4.942 4.942 0 0 0-8.34 2.528c-5.765-1.078-11.372-6.662-11.721-11.653a4.908 4.908 0 0 0 2.586-1.36a4.943 4.943 0 0 0 0-6.99L9.594 1.94a4.943 4.943 0 0 0-6.99 0C-7.882 12.426 23.574 43.882 34.06 33.396a4.944 4.944 0 0 0 0-6.989'/%3E%3C/svg%3E");
+}
+
+.woocommerce .validate-email .woocommerce-input-wrapper::before {
+    content: url("https://api.iconify.design/carbon/email.svg?width=22&height=22");
+
+}
+
 .woocommerce .icon-email .woocommerce-input-wrapper::before {
   position: absolute;
   margin: auto;
@@ -1941,4 +1954,23 @@ label[for="stripe-card-element"], label[for="stripe-exp-element"], label[for="st
         overflow: hidden;
         text-overflow: ellipsis;
     }
+}
+
+.woocommerce-form-login-toggle .woocommerce-info {
+    border: none!important;
+    background: white!important;
+    padding-left: 0!important;
+}
+
+.woocommerce-form-login [type='text'], [type='email'], [type='url'], [type='password'], [type='number'], [type='date'], [type='datetime-local'], [type='month'], [type='tel'], [type='time'], [type='week'], [multiple], textarea, select {
+    border: 1px solid #D8D7CE !important;
+}
+
+
+.woocommerce-checkout .woocommerce form.login {
+    border: 2px solid black !important;
+    padding: 1.5rem !important;
+    margin: 2em 0 !important;
+    text-align: left !important;
+    border-radius: 20px !important;
 }
