--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -2392,14 +2392,6 @@ label[for="stripe-card-element"], label[for="stripe-exp-element"], label[for="st
   display: none;
 }
 
-.wvs-theme-rollingdonuts .summary {
-  display: none;
-}
-
-.woosuite-mix-and-match-wrapper h2 {
-  display: none;
-}
-
 .woosuite-mix-and-match-selected {
     border-radius: 16.076px;
     background: black;
@@ -2407,6 +2399,29 @@ label[for="stripe-card-element"], label[for="stripe-exp-element"], label[for="st
 
 .woosuite-mix-and-match-selected .woosuite-mix-and-match-item {
     background-color: #000;
-    border: 1px solid white;
+    border: none;
     border-radius: 16.076px;
+}
+
+.woosuite-mix-and-match-item:hover .dashicons {
+    display: flex;
+}
+
+.woosuite-mix-and-match-available .dashicons {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    float: left;
+    margin-top: unset;
+    font-size: 3.5vw;
+    color: #fff;
+    align-items: center;
+    justify-content: center;
+    height: unset;
+    display: flex;
+}
+
+.woosuite-mix-and-match-item img {
+    width: 100%;
+    margin: auto;
 }
