--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -67,6 +67,68 @@ body {
 }
 */
 
+.entry-content img {
+	margin: 0 0 1.5em;
+	}
+
+.alignleft, img.alignleft {
+	margin-right: 1.5em;
+	display: inline;
+	float: left;
+	}
+
+.alignright, img.alignright {
+	margin-left: 1.5em;
+	display: inline;
+	float: right;
+	}
+
+.aligncenter, img.aligncenter {
+	margin-right: auto;
+	margin-left: auto;
+	display: block;
+	clear: both;
+	}
+
+.wp-caption {
+	margin-bottom: 1.5em;
+	text-align: center;
+	padding-top: 5px;
+	}
+
+.wp-caption img {
+	border: 0 none;
+	padding: 0;
+	margin: 0;
+	}
+
+.wp-caption p.wp-caption-text {
+	line-height: 1.5;
+	font-size: 10px;
+	margin: 0;
+	}
+
+.wp-smiley {
+	margin: 0 !important;
+	max-height: 1em;
+	}
+
+blockquote.left {
+	margin-right: 20px;
+	text-align: right;
+	margin-left: 0;
+	width: 33%;
+	float: left;
+	}
+
+blockquote.right {
+	margin-left: 20px;
+	text-align: left;
+	margin-right: 0;
+	width: 33%;
+	float: right;
+	}
+
 @media (width <= 1250px) {
   #donut-thumb-slider-list {
     gap: 1rem;
@@ -161,7 +223,7 @@ button {
 }
 
 .e-content p, .gutenburg p {
-  @apply font-laca text-sm-font font-light leading-[1.3rem];
+  @apply font-laca text-base-font font-light leading-[1.3rem] pt-2 pb-t;
 }
 
 .basket-detail {
